--- a/projekt_frontend/src/index.html
+++ b/projekt_frontend/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://kit.fontawesome.com/f6a8e7b339.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <meta charset="utf-8">
   <title>ProjektFrontend</title>
   <base href="/">
